--- a/index.html
+++ b/index.html
@@ -32,7 +32,17 @@
     </style>
   </head>
   <body>
+    <!--  -->
     <canvas id="canvas" width="320" height="240"></canvas>
+
+    <!-- -->
+    <script src="canvas.js" type="text/javascript"></script>
+    <script src="constants.js" type="text/javascript"></script>
+    <script src="imageloading.js" type="text/javascript"></script>
+    <script src="gameobjects.js" type="text/javascript"></script>
+    <script src="maps.js" type="text/javascript"></script>
+    <script src="gamelogic.js" type="text/javascript"></script>
+    <script src="input.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
