--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="canvas.js" type="text/javascript"></script>
     <script src="constants.js" type="text/javascript"></script>
     <script src="imageloading.js" type="text/javascript"></script>
+    <script src="soundloading.js" type="text/javascript"></script>
     <script src="gameobjects.js" type="text/javascript"></script>
     <script src="maps.js" type="text/javascript"></script>
     <script src="gamelogic.js" type="text/javascript"></script>
