--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="maps.js" type="text/javascript"></script>
     <script src="gamelogic.js" type="text/javascript"></script>
     <script src="input.js" type="text/javascript"></script>
+    <script src="gamepad.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
