--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <!-- -->
     <script src="canvas.js" type="text/javascript"></script>
     <script src="constants.js" type="text/javascript"></script>
+    <script src="errordetection.js" type="text/javascript"></script>
     <script src="gamestate.js" type="text/javascript"></script>
     <script src="fontloading.js" type="text/javascript"></script>
     <script src="imageloading.js" type="text/javascript"></script>
