--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script src="fontloading.js" type="text/javascript"></script>
     <script src="imageloading.js" type="text/javascript"></script>
     <script src="soundloading.js" type="text/javascript"></script>
+    <script src="animations.js" type="text/javascript"></script>
     <script src="gameobjects.js" type="text/javascript"></script>
     <script src="maps.js" type="text/javascript"></script>
     <script src="gamelogic.js" type="text/javascript"></script>
