--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       }
       canvas {
         width: 640px;
-        height: 480;
+        height: 480px;
         image-rendering: -moz-crisp-edges;
         image-rendering: -webkit-crisp-edges;
         image-rendering: pixelated;
@@ -27,7 +27,6 @@
         border-style: solid;
         border-width: 2px;
         border-color: white;
-        margin-top: 80px;
       }
     </style>
   </head>
