--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="errordetection.js" type="text/javascript"></script>
     <script src="gamestate.js" type="text/javascript"></script>
     <script src="fontloading.js" type="text/javascript"></script>
+    <script src="languages.js" type="text/javascript"></script>
     <script src="imageloading.js" type="text/javascript"></script>
     <script src="soundloading.js" type="text/javascript"></script>
     <script src="animations.js" type="text/javascript"></script>
