--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <script src="gameobjects.js" type="text/javascript"></script>
     <script src="maps.js" type="text/javascript"></script>
     <script src="gamelogic.js" type="text/javascript"></script>
+    <script src="menus.js" type="text/javascript"></script>
     <script src="input.js" type="text/javascript"></script>
     <script src="gamepad.js" type="text/javascript"></script>
     <script src="particles.js" type="text/javascript"></script>
