--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     <script src="animations.js" type="text/javascript"></script>
     <script src="gameobjects.js" type="text/javascript"></script>
     <script src="maps.js" type="text/javascript"></script>
-    <script src="gamelogic.js" type="text/javascript"></script>
+    <script src="globalvars.js" type="text/javascript"></script>
+    <script src="utils.js" type="text/javascript"></script>
     <script src="menus.js" type="text/javascript"></script>
     <script src="input.js" type="text/javascript"></script>
     <script src="gamepad.js" type="text/javascript"></script>
