--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <script src="input.js" type="text/javascript"></script>
     <script src="gamepad.js" type="text/javascript"></script>
     <script src="particles.js" type="text/javascript"></script>
+    <script src="gamelogic.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
