Sorted js files into folders

--- a/index.html
+++ b/index.html
@@ -31,29 +31,41 @@
     </style>
   </head>
   <body>
-    <!--  -->
+    <!-- CANVAS -->
     <canvas id="canvas" width="320" height="240"></canvas>
 
-    <!-- -->
-    <script src="canvas.js" type="text/javascript"></script>
-    <script src="constants.js" type="text/javascript"></script>
-    <script src="colors.js" type="text/javascript"></script>
-    <script src="errordetection.js" type="text/javascript"></script>
-    <script src="gamestate.js" type="text/javascript"></script>
-    <script src="fontloading.js" type="text/javascript"></script>
-    <script src="languages.js" type="text/javascript"></script>
-    <script src="imageloading.js" type="text/javascript"></script>
-    <script src="soundloading.js" type="text/javascript"></script>
-    <script src="animations.js" type="text/javascript"></script>
-    <script src="gameobjects.js" type="text/javascript"></script>
-    <script src="maps.js" type="text/javascript"></script>
-    <script src="globalvars.js" type="text/javascript"></script>
-    <script src="utils.js" type="text/javascript"></script>
-    <script src="menus.js" type="text/javascript"></script>
-    <script src="input.js" type="text/javascript"></script>
-    <script src="gamepad.js" type="text/javascript"></script>
-    <script src="particles.js" type="text/javascript"></script>
-    <script src="gamelogic.js" type="text/javascript"></script>
-    <script src="index.js" type="text/javascript"></script>
+    <!-- CORE -->
+    <script src="/js/core/canvas.js" type="text/javascript"></script>
+    <script src="/js/core/constants.js" type="text/javascript"></script>
+    <script src="/js/core/errordetection.js" type="text/javascript"></script>
+    <script src="/js/core/gamestate.js" type="text/javascript"></script>
+    <script src="/js/core/fontloading.js" type="text/javascript"></script>
+    <script src="/js/core/imageloading.js" type="text/javascript"></script>
+    <script src="/js/core/soundloading.js" type="text/javascript"></script>
+    <script src="/js/core/globalvars.js" type="text/javascript"></script>
+    <script src="/js/core/utils.js" type="text/javascript"></script>
+
+    <!-- GRAPHICS -->
+    <script src="js/graphics/colors.js" type="text/javascript"></script>
+    <script src="js/graphics/animations.js" type="text/javascript"></script>
+    <script src="js/graphics/particles.js" type="text/javascript"></script>
+
+    <!-- INPUTS -->
+    <script src="/js/inputs/input.js" type="text/javascript"></script>
+    <script src="/js/inputs/gamepad.js" type="text/javascript"></script>
+
+    <!-- CONTENT -->
+    <script src="/js/content/languages.js" type="text/javascript"></script>
+    <script src="/js/content/maps.js" type="text/javascript"></script>
+
+    <!-- MENUS -->
+    <script src="/js/menus/menus.js" type="text/javascript"></script>
+
+    <!-- GAME -->
+    <script src="js/game/gameobjects.js" type="text/javascript"></script>
+    <script src="js/game/gamelogic.js" type="text/javascript"></script>
+
+    <!-- INDEX -->
+    <script src="js/index.js" type="text/javascript"></script>
   </body>
 </html>
