--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
     <!-- MENUS -->
     <script src="/js/menus/menus.js" type="text/javascript"></script>
+    <script src="/js/menus/gameoverui.js" type="text/javascript"></script>
 
     <!-- GAME -->
     <script src="js/game/gameobjects.js" type="text/javascript"></script>
