--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@
     <script src="/js/content/maps.js" type="text/javascript"></script>
 
     <!-- MENUS -->
-    <script src="/js/menus/menus.js" type="text/javascript"></script>
+    <script src="/js/menus/inputs.js" type="text/javascript"></script>
+    <script src="/js/menus/menu.js" type="text/javascript"></script>
+    <script src="/js/menus/menu-utils.js" type="text/javascript"></script>
+    <script src="/js/menus/mainmenu.js" type="text/javascript"></script>
+    <script src="/js/menus/options.js" type="text/javascript"></script>
+    <script src="/js/menus/credits.js" type="text/javascript"></script>
+    <script src="/js/menus/graphics.js" type="text/javascript"></script>
+    <script src="/js/menus/sound.js" type="text/javascript"></script>
+    <script src="/js/menus/language.js" type="text/javascript"></script>
+    <script src="/js/menus/score.js" type="text/javascript"></script>
+    <script src="/js/menus/high-scores.js" type="text/javascript"></script>
+    <script src="/js/menus/controls.js" type="text/javascript"></script>
     <script src="/js/menus/gameoverui.js" type="text/javascript"></script>
 
     <!-- GAME -->
