--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <script src="/js/menus/score.js" type="text/javascript"></script>
     <script src="/js/menus/high-scores.js" type="text/javascript"></script>
     <script src="/js/menus/controls.js" type="text/javascript"></script>
+    <script src="/js/menus/gameplay.js" type="text/javascript"></script>
     <script src="/js/menus/gameoverui.js" type="text/javascript"></script>
 
     <!-- GAME -->
