--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
     <canvas id="canvas" width="320" height="240"></canvas>
 
     <!-- CORE -->
-    <script src="/js/core/canvas.js" type="text/javascript"></script>
-    <script src="/js/core/constants.js" type="text/javascript"></script>
-    <script src="/js/core/errordetection.js" type="text/javascript"></script>
-    <script src="/js/core/gamestate.js" type="text/javascript"></script>
-    <script src="/js/core/fontloading.js" type="text/javascript"></script>
-    <script src="/js/core/imageloading.js" type="text/javascript"></script>
-    <script src="/js/core/soundloading.js" type="text/javascript"></script>
-    <script src="/js/core/globalvars.js" type="text/javascript"></script>
-    <script src="/js/core/utils.js" type="text/javascript"></script>
+    <script src="js/core/canvas.js" type="text/javascript"></script>
+    <script src="js/core/constants.js" type="text/javascript"></script>
+    <script src="js/core/errordetection.js" type="text/javascript"></script>
+    <script src="js/core/gamestate.js" type="text/javascript"></script>
+    <script src="js/core/fontloading.js" type="text/javascript"></script>
+    <script src="js/core/imageloading.js" type="text/javascript"></script>
+    <script src="js/core/soundloading.js" type="text/javascript"></script>
+    <script src="js/core/globalvars.js" type="text/javascript"></script>
+    <script src="js/core/utils.js" type="text/javascript"></script>
 
     <!-- GRAPHICS -->
     <script src="js/graphics/colors.js" type="text/javascript"></script>
@@ -51,28 +51,28 @@
     <script src="js/graphics/particles.js" type="text/javascript"></script>
 
     <!-- INPUTS -->
-    <script src="/js/inputs/input.js" type="text/javascript"></script>
-    <script src="/js/inputs/gamepad.js" type="text/javascript"></script>
+    <script src="js/inputs/input.js" type="text/javascript"></script>
+    <script src="js/inputs/gamepad.js" type="text/javascript"></script>
 
     <!-- CONTENT -->
-    <script src="/js/content/languages.js" type="text/javascript"></script>
-    <script src="/js/content/maps.js" type="text/javascript"></script>
+    <script src="js/content/languages.js" type="text/javascript"></script>
+    <script src="js/content/maps.js" type="text/javascript"></script>
 
     <!-- MENUS -->
-    <script src="/js/menus/inputs.js" type="text/javascript"></script>
-    <script src="/js/menus/menu.js" type="text/javascript"></script>
-    <script src="/js/menus/menu-utils.js" type="text/javascript"></script>
-    <script src="/js/menus/mainmenu.js" type="text/javascript"></script>
-    <script src="/js/menus/options.js" type="text/javascript"></script>
-    <script src="/js/menus/credits.js" type="text/javascript"></script>
-    <script src="/js/menus/graphics.js" type="text/javascript"></script>
-    <script src="/js/menus/sound.js" type="text/javascript"></script>
-    <script src="/js/menus/language.js" type="text/javascript"></script>
-    <script src="/js/menus/score.js" type="text/javascript"></script>
-    <script src="/js/menus/high-scores.js" type="text/javascript"></script>
-    <script src="/js/menus/controls.js" type="text/javascript"></script>
-    <script src="/js/menus/gameplay.js" type="text/javascript"></script>
-    <script src="/js/menus/gameoverui.js" type="text/javascript"></script>
+    <script src="js/menus/inputs.js" type="text/javascript"></script>
+    <script src="js/menus/menu.js" type="text/javascript"></script>
+    <script src="js/menus/menu-utils.js" type="text/javascript"></script>
+    <script src="js/menus/mainmenu.js" type="text/javascript"></script>
+    <script src="js/menus/options.js" type="text/javascript"></script>
+    <script src="js/menus/credits.js" type="text/javascript"></script>
+    <script src="js/menus/graphics.js" type="text/javascript"></script>
+    <script src="js/menus/sound.js" type="text/javascript"></script>
+    <script src="js/menus/language.js" type="text/javascript"></script>
+    <script src="js/menus/score.js" type="text/javascript"></script>
+    <script src="js/menus/high-scores.js" type="text/javascript"></script>
+    <script src="js/menus/controls.js" type="text/javascript"></script>
+    <script src="js/menus/gameplay.js" type="text/javascript"></script>
+    <script src="js/menus/gameoverui.js" type="text/javascript"></script>
 
     <!-- GAME -->
     <script src="js/game/gameobjects.js" type="text/javascript"></script>
