--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <canvas id="canvas" width="320" height="240"></canvas>
 
     <!-- CORE -->
+    <script src="js/graphics/colors.js" type="text/javascript"></script>
     <script src="js/core/canvas.js" type="text/javascript"></script>
     <script src="js/core/constants.js" type="text/javascript"></script>
     <script src="js/core/errordetection.js" type="text/javascript"></script>
@@ -46,7 +47,6 @@
     <script src="js/core/utils.js" type="text/javascript"></script>
 
     <!-- GRAPHICS -->
-    <script src="js/graphics/colors.js" type="text/javascript"></script>
     <script src="js/graphics/animations.js" type="text/javascript"></script>
     <script src="js/graphics/particles.js" type="text/javascript"></script>
 
@@ -75,6 +75,7 @@
     <script src="js/menus/controls.js" type="text/javascript"></script>
     <script src="js/menus/gameplay.js" type="text/javascript"></script>
     <script src="js/menus/gameoverui.js" type="text/javascript"></script>
+    <script src="js/menus/colors.js" type="text/javascript"></script>
 
     <!-- GAME -->
     <script src="js/game/gameobjects.js" type="text/javascript"></script>
