Renaming cutscene files

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <!-- CONTENT -->
     <script src="js/content/languages.js" type="text/javascript"></script>
     <script src="js/content/maps.js" type="text/javascript"></script>
-    <script src="js/content/intro.js" type="text/javascript"></script>
-    <script src="js/content/storysequence.js" type="text/javascript"></script>
+    <script src="js/content/script.js" type="text/javascript"></script>
+    <script src="js/content/cutscene.js" type="text/javascript"></script>
 
     <!-- MENUS -->
     <script src="js/menus/inputs.js" type="text/javascript"></script>
