--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <script src="js/content/maps.js" type="text/javascript"></script>
     <script src="js/content/script.js" type="text/javascript"></script>
     <script src="js/content/cutscene.js" type="text/javascript"></script>
+    <script src="js/content/prompt.js" type="text/javascript"></script>
 
     <!-- MENUS -->
     <script src="js/menus/inputs.js" type="text/javascript"></script>
